--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=booking
-spring.datasource.url=jdbc:postgresql://localhost:5432/booking
-spring.datasource.username=mohsin
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
 spring.datasource.password=kgfpart2
 # Optional: Hibernate settings
 spring.jpa.hibernate.ddl-auto=update
